--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -15,10 +15,11 @@
             android:layout_height="fill_parent"
             android:fillViewport="true">
 
-            <TableLayout
-                android:id="@+id/playlistUser"
+            <LinearLayout
+                android:id="@+id/linearForPlaylistUser"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"></LinearLayout>
         </ScrollView>
 
     </RelativeLayout>
