--- a/app/src/main/res/layout/activity_playlist_view.xml
+++ b/app/src/main/res/layout/activity_playlist_view.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/hazy" />
+        app:srcCompat="@drawable/hazy1" />
 
     <TextView
         android:id="@+id/playlistNameInPlaylistView"
