--- a/app/src/main/res/layout/add_playlist_pop_up.xml
+++ b/app/src/main/res/layout/add_playlist_pop_up.xml
@@ -14,13 +14,14 @@
 
         <EditText
             android:id="@+id/fielForNewPlaylist"
-            android:layout_width="match_parent"
+            android:layout_width="325dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintTop_toBottomOf="@+id/textView7"
-            tools:layout_editor_absoluteX="0dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         <Button
             android:id="@+id/cancelNewPlaylist"
