--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -87,6 +87,7 @@
         android:layout_height="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
