--- a/app/src/main/res/layout/activity_album_view.xml
+++ b/app/src/main/res/layout/activity_album_view.xml
@@ -32,7 +32,7 @@
         android:id="@+id/titleInAlbumView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="55dp"
         android:singleLine="true"
         android:text="Titles"
         android:textSize="20dp"
@@ -59,11 +59,22 @@
 
     <ImageView
         android:id="@+id/AlbumImageInAlbumView"
-        android:layout_width="298dp"
-        android:layout_height="221dp"
+        android:layout_width="274dp"
+        android:layout_height="166dp"
         android:layout_marginTop="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView" />
+
+    <Button
+        android:id="@+id/followButtonAlbum"
+        android:layout_width="114dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="11dp"
+        android:text="Like"
+        android:background="@drawable/roundbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/albumNameInAlbumView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
