--- a/app/src/main/res/layout/activity_listening.xml
+++ b/app/src/main/res/layout/activity_listening.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="53dp"
         android:clickable="true"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/ArtistIDinListening"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/ArtistIDinListening"
         android:layout_width="378dp"
         android:layout_height="41dp"
         android:layout_marginStart="17dp"
@@ -55,7 +55,7 @@
         android:layout_height="340dp"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="7dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/ArtistIDinListening"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +126,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/AlbumIDinListening" />
 
     <ImageButton
         android:id="@+id/addPlaylistButton"
@@ -151,7 +151,7 @@
         app:srcCompat="@drawable/likenoclick" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/AlbumIDinListening"
         android:layout_width="378dp"
         android:layout_height="41dp"
         android:gravity="center"
@@ -163,7 +163,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.303"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/ArtistIDinListening"
         app:layout_constraintVertical_bias="0.057" />
 
     <!--app:srcCompat="@drawable/hazy"
