--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -100,7 +100,9 @@
         android:text="Follow"
         app:layout_constraintBottom_toTopOf="@+id/tableLayoutArtistID"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameArtistID" />
+        app:layout_constraintTop_toBottomOf="@+id/nameArtistID"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
