--- a/app/src/main/res/layout/activity_concert.xml
+++ b/app/src/main/res/layout/activity_concert.xml
@@ -138,15 +138,15 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/imageViewArtistImage"
         android:layout_width="wrap_content"
         android:layout_height="160dp"
         app:layout_constraintBottom_toTopOf="@+id/mapView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtDateConcertID"
         app:layout_constraintTop_toBottomOf="@+id/searchView2"
-        app:layout_constraintVertical_bias="0.067"
+        app:layout_constraintVertical_bias="0.054"
         app:srcCompat="@drawable/postmalone" />
 
     <TextView
