--- a/app/src/main/res/layout/activity_album_view.xml
+++ b/app/src/main/res/layout/activity_album_view.xml
@@ -20,22 +20,25 @@
         android:id="@+id/albumNameInAlbumView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:singleLine="true"
         android:text="Nom de l'album"
         android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollViewAlbum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AlbumImageInAlbumView" />
+        app:layout_constraintTop_toBottomOf="@+id/AlbumImageInAlbumView"
+        app:layout_constraintVertical_bias="0.11" />
 
     <TextView
         android:id="@+id/titleInAlbumView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
+        android:layout_marginBottom="8dp"
         android:singleLine="true"
         android:text="Titles"
         android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollViewAlbum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/albumNameInAlbumView" />
@@ -44,11 +47,13 @@
         android:id="@+id/scrollViewAlbum"
         android:layout_width="match_parent"
         android:layout_height="375dp"
+        android:layout_marginTop="3dp"
         android:clipToPadding="false"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleInAlbumView">
 
         <LinearLayout
             android:id="@+id/linearForAlbumView"
@@ -61,18 +66,22 @@
         android:id="@+id/AlbumImageInAlbumView"
         android:layout_width="274dp"
         android:layout_height="166dp"
-        android:layout_marginTop="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollViewAlbum"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        app:layout_constraintVertical_bias="0.057" />
 
     <Button
         android:id="@+id/followButtonAlbum"
         android:layout_width="114dp"
         android:layout_height="27dp"
         android:layout_marginTop="11dp"
-        android:text="Like"
+        android:layout_marginBottom="17dp"
         android:background="@drawable/roundbutton"
+        android:text="Like"
+        app:layout_constraintBottom_toTopOf="@+id/titleInAlbumView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/albumNameInAlbumView" />
